# mail_attachment

./: .gitignore  .stylish-haskell.yaml  README  README.md  Setup.hs  attachment-parser.cabal
src/: MailParser.hs  main.hs
test/: extractFilename.txt  extractSender.txt  runTests.hs
