Name:                attachment-parser
Version:             1.0
Synopsis:            Extract attachment from email
Description:         Extract attachment from email, require an email per file
                    
cabal-version:       >= 1.2
License:             GPL
Author:              Romain Gerard
Maintainer:          Romain Gerard <romain.gerard@erebe.eu>
build-type:          Simple

Library
    ghc-options:     -O3 -Wall

Executable          attachment-parser
    ghc-options:         -threaded -Wall -O3
    Main-is:             src/main.hs
    Build-Depends:       base, either, regex-pcre, array, bytestring, 
                         conduit, base64-conduit, directory, transformers,
                         async, base64-bytestring, MissingH
     

